--- a/Home.html
+++ b/Home.html
@@ -416,49 +416,59 @@
             text-decoration: underline;
             cursor: pointer;
         }
+
         @media (max-width:992px) {
-            
+
             .modal .logo_img {
-                width:25% !important
+                width: 25% !important
             }
+
             #Step_1_Modal .modal-body .container .col-auto,
             #Step_2_Modal .modal-body .container .col-auto,
-            #Step_3_Modal .modal-body .container .col-auto{
+            #Step_3_Modal .modal-body .container .col-auto {
                 padding-right: 0 !important;
                 padding-left: 8px !important;
             }
         }
+
         @media (max-width:495px) {
             .modal .padding_left {
                 padding-left: 12% !important;
             }
+
             .modal .logo_img {
-                width:35% !important
+                width: 35% !important
             }
+
             .modal .text_size {
-               font-size: 17px !important;
+                font-size: 17px !important;
             }
-            .Heading_Steps{
+
+            .Heading_Steps {
                 font-size: xx-large !important;
             }
         }
 
         @media (min-width:855.1px) {
-            .col-4.Modal_Click_Here{
+            .col-4.Modal_Click_Here {
                 padding-left: 16px !important;
                 padding-right: 16px !important;
             }
-            .col-4.Modal_Click_Here .logo_img{
-                width:40% !important
+
+            .col-4.Modal_Click_Here .logo_img {
+                width: 40% !important
             }
+
             .modal .padding_left {
                 padding-left: 10% !important;
             }
         }
-        @media (min-width:855.1px) and (max-width:1200px){
+
+        @media (min-width:855.1px) and (max-width:1300px) {
             .modal .text_size {
-               font-size: 17px !important;
+                font-size: 17px !important;
             }
+
             .modal .padding_left {
                 padding-left: 20% !important;
             }
@@ -468,11 +478,13 @@
             .modal .padding_left {
                 padding-left: 10% !important;
             }
+
             #pro_in_three_steps {
                 width: 92% !important;
                 padding-left: 0 !important;
                 padding-right: 0 !important;
             }
+
             #pro_in_three_steps .col-12 {
                 padding-left: 0 !important;
                 padding-right: 0 !important;
@@ -482,7 +494,8 @@
                 padding-left: 8px !important;
                 padding-right: 8px !important;
             }
-            #container_row_width{
+
+            #container_row_width {
                 padding-left: 0 !important;
             }
         }
@@ -509,37 +522,45 @@
                 font-size: x-large !important;
                 font-size: x-large !important;
             }
+
             .text_size_2 {
                 font-size: medium !important;
                 font-size: medium !important;
             }
+
             #pro_in_three_steps .col-4 {
                 padding-left: 2px !important;
                 padding-right: 2px !important;
             }
+
             .extra_space_top_bottom {
                 margin-top: 5px !important;
                 margin-bottom: 5px !important;
                 padding-top: 5px !important;
                 padding-bottom: 5px !important;
             }
+
             .center_col {
                 margin-top: 5px !important;
                 margin-bottom: 5px !important;
             }
+
             #Step_1_Modal .modal-body .card-1 .container,
             #Step_2_Modal .modal-body .card-1 .container,
-            #Step_3_Modal .modal-body .card-1 .container{
+            #Step_3_Modal .modal-body .card-1 .container {
                 padding-left: 15px !important;
             }
-            #img_logo{
+
+            #img_logo {
                 width: 75% !important;
             }
         }
+
         @media (max-width:375px) {
+
             #Step_1_Modal .modal-body .card-1 .container,
             #Step_2_Modal .modal-body .card-1 .container,
-            #Step_3_Modal .modal-body .card-1 .container{
+            #Step_3_Modal .modal-body .card-1 .container {
                 padding-left: 5px !important;
             }
         }
@@ -873,7 +894,8 @@
         <div class="mt-5 container-fluid pagespeed_hide" id="pro_in_three_steps" style="width:80%">
             <div class="row">
                 <div class="mb-3 mt-5 pt-5 personal_learning_p">
-                    <p class="my-0"><span class="Heading_Steps" style="font-size: xxx-large;">Be a <span style="color:#5271ff">PRO</span> in 3 steps</span></p>
+                    <p class="my-0"><span class="Heading_Steps" style="font-size: xxx-large;">Be a <span
+                                style="color:#5271ff">PRO</span> in 3 steps</span></p>
                 </div>
             </div>
             <div class="row px-1 justify-content-center" id="container_row_width" style="padding-right: 0 !important;">
@@ -909,8 +931,9 @@
                                 <div
                                     class="my-4 row py-4 d-flex justify-content-center align-items-center extra_space_top_bottom">
                                     <div class="col-12 text-center">
-                                        <img class="logo_img" id="img_logo" src="img/horizontal_scroll/images/Tredcode.svg"
-                                            loading="lazy" alt="task_list" style="width:73%" />
+                                        <img class="logo_img" id="img_logo"
+                                            src="img/horizontal_scroll/images/Tredcode.svg" loading="lazy"
+                                            alt="task_list" style="width:73%" />
                                     </div>
                                     <div class="my-4 col-12 text-center center_col">
                                         <span class="text_size_1"
@@ -2532,11 +2555,12 @@
                                     <div class="row d-flex justify-content-center align-items-center">
                                         <div class="col-12 text-center">
                                             <span class="text_size" style="font-size: x-large;font-weight: 900;">Step
-                                                2:<br/> Master Tool Tredcode</span>
+                                                2:<br /> Master Tool Tredcode</span>
                                         </div>
                                         <div class="col-12 mb-4 text-center">
-                                            <span class="text_size" style="font-size: x-large;font-weight: 500;">Designed & developed
-                                                    by TCI to find right trading opportunity at right time.</span>
+                                            <span class="text_size"
+                                                style="font-size: x-large;font-weight: 500;">Designed & developed
+                                                by TCI to find right trading opportunity at right time.</span>
                                         </div>
                                         <div class="my-3 col-12 text-center">
                                             <img class="logo_img" src="img/horizontal_scroll/images/target_3.svg"
@@ -2546,8 +2570,8 @@
                                             <div class="container padding_left" style="padding-left: 25%">
                                                 <div class="my-1 row">
                                                     <div class="col-1 px-1 d-flex align-items-center">
-                                                        <img src="img/horizontal_scroll/images/check.svg"
-                                                            loading="lazy" alt="task_list" style="width:100%" />
+                                                        <img src="img/horizontal_scroll/images/check.svg" loading="lazy"
+                                                            alt="task_list" style="width:100%" />
                                                     </div>
                                                     <div class="col-auto justify-content-start">
                                                         <div class="text_size"
@@ -2557,8 +2581,8 @@
                                                 </div>
                                                 <div class="my-1 row">
                                                     <div class="col-1 px-1 d-flex align-items-center">
-                                                        <img src="img/horizontal_scroll/images/check.svg"
-                                                            loading="lazy" alt="task_list" style="width:100%" />
+                                                        <img src="img/horizontal_scroll/images/check.svg" loading="lazy"
+                                                            alt="task_list" style="width:100%" />
                                                     </div>
                                                     <div class="col-auto justify-content-start">
                                                         <div class="text_size"
@@ -2568,8 +2592,8 @@
                                                 </div>
                                                 <div class="my-1 row">
                                                     <div class="col-1 px-1 d-flex align-items-center">
-                                                        <img src="img/horizontal_scroll/images/check.svg"
-                                                            loading="lazy" alt="task_list" style="width:100%" />
+                                                        <img src="img/horizontal_scroll/images/check.svg" loading="lazy"
+                                                            alt="task_list" style="width:100%" />
                                                     </div>
                                                     <div class="col-auto justify-content-start">
                                                         <div class="text_size"
@@ -2580,15 +2604,16 @@
                                             </div>
                                         </div>
                                         <div class=" my-3 col-12 text-center">
-                                            <img class="logo_img" src="img/horizontal_scroll/images/predictive-chart.svg"
-                                                loading="lazy" alt="task_list" style="width:20%" />
+                                            <img class="logo_img"
+                                                src="img/horizontal_scroll/images/predictive-chart.svg" loading="lazy"
+                                                alt="task_list" style="width:20%" />
                                         </div>
                                         <div class="col-12">
                                             <div class="pe-0 container padding_left" style="padding-left: 25%">
                                                 <div class="my-1 row">
                                                     <div class="col-1 px-1 d-flex align-items-center">
-                                                        <img src="img/horizontal_scroll/images/check.svg"
-                                                            loading="lazy" alt="task_list" style="width:100%" />
+                                                        <img src="img/horizontal_scroll/images/check.svg" loading="lazy"
+                                                            alt="task_list" style="width:100%" />
                                                     </div>
                                                     <div class="col-auto justify-content-start">
                                                         <div class="text_size"
@@ -2598,8 +2623,8 @@
                                                 </div>
                                                 <div class="my-1 row">
                                                     <div class="col-1 px-1 d-flex align-items-center">
-                                                        <img src="img/horizontal_scroll/images/check.svg"
-                                                            loading="lazy" alt="task_list" style="width:100%" />
+                                                        <img src="img/horizontal_scroll/images/check.svg" loading="lazy"
+                                                            alt="task_list" style="width:100%" />
                                                     </div>
                                                     <div class="col-auto justify-content-start">
                                                         <div class="text_size"
@@ -2609,8 +2634,8 @@
                                                 </div>
                                                 <div class="my-1 row">
                                                     <div class="col-1 px-1 d-flex align-items-center">
-                                                        <img src="img/horizontal_scroll/images/check.svg"
-                                                            loading="lazy" alt="task_list" style="width:100%" />
+                                                        <img src="img/horizontal_scroll/images/check.svg" loading="lazy"
+                                                            alt="task_list" style="width:100%" />
                                                     </div>
                                                     <div class="col-auto justify-content-start">
                                                         <div class="text_size"
@@ -2649,7 +2674,8 @@
                                                 3:</span>
                                         </div>
                                         <div class="col-12 mb-4 text-center">
-                                            <span class="text_size" style="font-size: x-large;font-weight: 500;">TCI community of Pro
+                                            <span class="text_size" style="font-size: x-large;font-weight: 500;">TCI
+                                                community of Pro
                                                 traders & get live market trade ideas</span>
                                         </div>
                                         <div class="my-3 col-12 text-center">
@@ -2694,8 +2720,9 @@
                                             </div>
                                         </div>
                                         <div class=" my-3 col-12 text-center">
-                                            <img class="logo_img" src="img/horizontal_scroll/images/marketing-strategy.svg"
-                                                loading="lazy" alt="task_list" style="width:20%" />
+                                            <img class="logo_img"
+                                                src="img/horizontal_scroll/images/marketing-strategy.svg" loading="lazy"
+                                                alt="task_list" style="width:20%" />
                                         </div>
                                         <div class="col-12">
                                             <div class="container padding_left" style="padding-left: 25%">
