--- a/Home.html
+++ b/Home.html
@@ -34,7 +34,7 @@
     <!-- odometer -->
     <link rel="stylesheet" href="css/odometer-theme-default.css" />
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.5.6/css/ionicons.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.5.6/css/ionicons.min.css"> -->
 
     <style>
         .Laptop_Video {
@@ -999,8 +999,8 @@
                                             <h3 class="mb-0">Foundation Module</h3>
                                         </div>
                                         <div class="icon d-flex align-items-center justify-content-center">
-                                            <i class="fa" aria-hidden="true"></i>
-                                            <!-- <i class="fa-solid fa-plus"></i> -->
+                                            <!-- <i class="fa" aria-hidden="true"></i> -->
+                                            <i class="fa-solid fa-plus"></i>
                                         </div>
                                     </button>
                                 </div>
@@ -1053,8 +1053,8 @@
                                             <h3 class="mb-0">Pro Module</h3>
                                         </div>
                                         <div class="icon d-flex align-items-center justify-content-center">
-                                            <i class="fa" aria-hidden="true"></i>
-                                            <!-- <i class="fa-solid fa-plus"></i> -->
+                                            <!-- <i class="fa" aria-hidden="true"></i> -->
+                                            <i class="fa-solid fa-plus"></i>
                                         </div>
                                     </button>
                                 </div>
@@ -1146,8 +1146,8 @@
                                             <h3 class="mb-0">Practical</h3>
                                         </div>
                                         <div class="icon d-flex align-items-center justify-content-center">
-                                            <i class="fa" aria-hidden="true"></i>
-                                            <!-- <i class="fa-solid fa-plus"></i> -->
+                                            <!-- <i class="fa" aria-hidden="true"></i> -->
+                                            <i class="fa-solid fa-plus"></i>
                                         </div>
                                     </button>
                                 </div>
